--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "with-styled-components",
+  "name": "imersao-react-next-js",
   "version": "1.0.0",
   "scripts": {
     "dev": "next",
